--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "charla-angular-firebase"]
 	path = charla-angular-firebase
-	url = https://github.com/raprav/charla-angular-firebase.git
+	url = git://github.com/raprav/charla-angular-firebase.git
